--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pixelate": "node utils/pixelate.js",
     "update_info": "node utils/update_info.js",
     "preview_gif": "node utils/preview_gif.js",
-    "generate_metadata": "node utils/generate_metadata.js"
+    "generate_metadata": "node utils/generate_metadata.js",
+    "clean" : "rm -rvf build"
   },
   "author": "Daniel Eugene Botha (HashLips)",
   "license": "MIT",
